--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.5",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5"
   },
