--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vue": "^3.2.13",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
