ran linting locally and fixed what the linter asked to me fix.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,7 +21,8 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "src/**/*.vue",
+    "src/components/**/*.vue",
+    "src/views/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
